--- a/model/models.ejs
+++ b/model/models.ejs
@@ -11,6 +11,11 @@ const todoSchema = new mongoose.Schema({
     date: {
         type: String,
         required: true,
+    },
+    isCompleted: {
+        type: Boolean,
+        default: false,
+        required: true,
     }
 });
 
