--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -24,6 +24,9 @@
             <%= data.date %>
           </h6>
           <h6 class="card-subtitle mb-2 text-muted">
+            Is Completed: <%= data.isCompleted %>
+          </h6>
+          <h6 class="card-subtitle mb-2 text-muted">
             id
             <%= data.postID %>
           </h6>
