--- a/model/models.ejs
+++ b/model/models.ejs
@@ -15,6 +15,9 @@ const todoSchema = new mongoose.Schema({
     isCompleted: {
         type: Boolean,
         default: false,
+    },
+    category: {
+        type: String,
         required: true,
     }
 });
