--- a/views/write.ejs
+++ b/views/write.ejs
@@ -28,6 +28,15 @@
           <label>Date</label>
           <input type="text" class="form-control" name="date" />
         </div>
+        <div class="form-group">
+          <label>Category</label>
+          <select type="dropdown" class="form-control" name="category" >
+            <option value="home">Home</option>
+            <option value="work">Work</option>
+            <option value="school">School</option>
+            <option value="personal">Personal</option>
+          </select>
+        </div>
         <button type="submit" class="btn btn-outline-secondary">Submit</button>
       </form>
     </div>
