--- a/views/list.ejs
+++ b/views/list.ejs
@@ -97,6 +97,17 @@
         });
       });    
     </script>
+    <script>
+      const categoriesBtns = document.querySelectorAll('.category');
+
+      categoriesBtns.forEach((btn) => {
+      const postId = btn.dataset.id;
+
+      btn.addEventListener('click', () => {
+        window.location.href = `/categories/${postId}`;
+      });
+    });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
