--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -12,6 +12,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="/list">List <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/completed">Completed Items <span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
